# happypose

./: .git-blame-ignore-revs  .mergify.yml  .pre-commit-config.yaml  404.html  README.md  download-data.html  environment.yml  evaluate-cosypose.html  index.html  print.html  pyproject.toml  searchindex.js  searchindex.json  train-cosypose.html
.github/: dependabot.yml
.github/workflows/: conda-test.yml  pip-test.yml  poetry-test.yml  uv-test.yml
docs/book/cosypose/: evaluate.md
happypose/pose_estimators/cosypose/: pyproject.toml
happypose/pose_estimators/cosypose/cosypose/: config.py
happypose/pose_estimators/cosypose/cosypose/datasets/: bop.py  urdf_dataset.py
happypose/pose_estimators/cosypose/cosypose/evaluation/: evaluation.py  prediction_runner.py
happypose/pose_estimators/cosypose/cosypose/libmesh/: urdf_utils.py
happypose/pose_estimators/cosypose/cosypose/scripts/: run_full_cosypose_eval_new.py
happypose/pose_estimators/megapose/: config.py
happypose/pose_estimators/megapose/docker/: Dockerfile.megapose
happypose/pose_estimators/megapose/evaluation/: eval_config.py
happypose/pose_estimators/megapose/inference/: refiner_utils.py  teaserpp_refiner.py  types.py
happypose/pose_estimators/megapose/scripts/: run_full_megapose_eval.py
happypose/pose_estimators/megapose/training/: training_config.py
happypose/toolbox/datasets/: bop_scene_dataset.py  datasets_cfg.py
happypose/toolbox/lib3d/: transform_ops.py
happypose/toolbox/renderer/: bullet_batch_renderer.py  bullet_scene_renderer.py  geometry.py  panda3d_batch_renderer.py  types.py
notebooks/cosypose/: inspect_dataset.ipynb  make_ycbv_per_object.ipynb  paper_training_logs.ipynb  render_dataset.ipynb  visualize_multiview_predictions.ipynb  visualize_singleview_predictions.ipynb
notebooks/megapose/: megapose_estimator_visualization.ipynb
requirements/: base.txt  cpu.txt  cu124.txt  generate.sh  pypi.txt
tests/: test_cosypose_detector_training.py  test_cosypose_pose_training.py  test_evaluation.py  test_renderer_bullet.py
